fix: corrige z-index do componente social media

--- a/src/components/SocialMedia.css
+++ b/src/components/SocialMedia.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  z-index: 1;
+  z-index: 11;
   bottom: 0;
   width: 80px;
   height: 300px;
